missing raw for pages too

--- a/{{cookiecutter.project_slug}}/pages/changelog.html
+++ b/{{cookiecutter.project_slug}}/pages/changelog.html
@@ -3,6 +3,7 @@ title: Change Log
 permalink: /changelog/
 ---
 
+{% raw %}
 <p>Subscribe with <a href="{{ site.baseurl }}/feed.xml">RSS</a> to keep up with the latest changes.</p>
 
 <p class="editor-link"><a href="cloudcannon:collections/_posts" class="btn"><strong>&#9998;</strong> Update Change Log</a></p>
@@ -19,3 +20,4 @@ permalink: /changelog/
 		</div>
 	{% endfor %}
 </div>
+{% endraw %}
