--- a/{{cookiecutter.project_slug}}/pages/search.html
+++ b/{{cookiecutter.project_slug}}/pages/search.html
@@ -3,7 +3,7 @@ title: Search
 sitemap: false
 permalink: /search/
 ---
-
+{% raw %}
 <p><span id="search-process">Loading</span> results <span id="search-query-container" style="display: none;">for "<strong id="search-query"></strong>"</span></p>
 <ul id="search-results"></ul>
 
@@ -31,3 +31,4 @@ permalink: /search/
 </script>
 <script src="{{ site.baseurl }}/assets/js/lunr.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/search.js"></script>
+{% endraw %}
